org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ValueProperty_invalid.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLInvalidationTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/BaseFunctions.kerml"}
		File {from ="/library.kernel/ScalarValues.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
		File {from ="/library.systems/Attributes.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
		       	File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/BaseFunctions.kerml"}
				File {from ="/library.kernel/ScalarValues.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
				File {from ="/library.systems/Attributes.sysml"}
			}
		}
	}
END_SETUP 
*/
package 'ValueProperty Example' {
	port def P;
	block A {
		part a: A;
		port p: P;
	}
	block Vehicle {
		// XPECT errors --> "An attribute must be typed by attribute definitions." at "a : A;"
		value a : A;
		// XPECT errors --> "An attribute must be typed by attribute definitions." at "b : A::a;"
		value b : A::a;
		// XPECT errors --> "An attribute must be typed by attribute definitions." at "s : P;"
		value s : P;
		//XPECT errors --> "An attribute must be typed by attribute definitions." at "un : A::p;"
		value un: A::p;
		//XPECT errors --> "An attribute must be typed by attribute definitions." at "n : AB;"
		value n: AB;
		}
	assoc block  AB {
		end : A;
		end : A;
	}
}